--- a/app/src/main/res/layout/sl_recyclerview.xml
+++ b/app/src/main/res/layout/sl_recyclerview.xml
@@ -5,7 +5,7 @@
 
 
     <TextView
-        android:id="@+id/list_name_text"
+        android:id="@+id/sl_list_name_text"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:text="This is a placeholder."
@@ -13,7 +13,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/item_name_text"
+        android:id="@+id/sl_item_name_text"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:text="This is a placeholder."
@@ -21,7 +21,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/category_name_text"
+        android:id="@+id/sl_category_name_text"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:text="This is a placeholder."
