--- a/app/src/main/res/layout/cat_recyclerview.xml
+++ b/app/src/main/res/layout/cat_recyclerview.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="60dp">
 
 
     <TextView
         android:id="@+id/cat_category_name_text"
-        android:layout_width="135dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="This is a placeholder."
         android:textColor="@color/black"
@@ -14,7 +14,7 @@
 
     <TextView
         android:id="@+id/cat_item_name_text"
-        android:layout_width="135dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="This is a placeholder."
         android:textColor="@color/black"
