Lots of changes
Finished all DB queries.
Finished categories screen including update and delete methods.
Added 3 color schemes with the ability to add many more.
Created a new Category adapter
Removed Marks Room files since they are unneeded in this branch.
Maybe some other things but It has been a long day.

--- a/app/src/main/res/layout/activity_shopping_lists.xml
+++ b/app/src/main/res/layout/activity_shopping_lists.xml
@@ -5,7 +5,7 @@
     android:id="@+id/addListBtn"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShoppingListsActivity">
+    tools:context=".activities.ShoppingListsActivity">
 
     <Button
         android:id="@+id/return_btn"
