--- a/app/src/main/res/layout/layout_lists.xml
+++ b/app/src/main/res/layout/layout_lists.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:padding="15dp"
-    android:id="@+id/parent_layout"
-    android:background="#CCC"
-    >
-
+    android:id="@+id/layout_lists"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#CBA"
+    android:padding="15dp">
 
 
     <TextView
+        android:id="@+id/list_name_text"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:id="@+id/list_name_text"
         android:text="This is a placeholder."
-        android:textSize="20sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <TextView
+        android:id="@+id/date_text"
         android:layout_width="100dp"
         android:layout_height="35dp"
         android:layout_alignParentEnd="true"
@@ -26,9 +26,8 @@
         android:layout_marginEnd="11dp"
         android:layout_marginRight="11dp"
         android:gravity="center"
-        android:id="@+id/date_text"
         android:text="date created\nxx/xx/xxxx"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black" />
 
 
 </RelativeLayout>
