Added a column to the categories table to act as a sort field to allow user to customize category sort order, set up constructor chaining in a few classes.

--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foreground="?attr/selectableItemBackground"
     tools:context=".activities.CategoriesActivity">
     <Button
         android:id="@+id/btn_return"
@@ -57,6 +58,7 @@
         android:id="@+id/rv_categories"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:foreground="?attr/selectableItemBackground"
         app:layout_constraintBottom_toTopOf="@+id/divider2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
